﻿PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.3.6

03 Mar 2011, PHP 5.3.6RC2
- Zend Engine:
  . Fixed bug #43512 (same parameter name can be used multiple times in
    method/function definition). (Felipe)

- Exif extension:
  . Fixed bug #54002 (crash on crafted tag, reported by Luca Carettoni).
    (Pierre) (CVE-2011-0708)

- OpenSSL extension:
  . Fixed bug #54060 (Memory leaks when openssl_encrypt). (Pierre)
  . Fixed bug #54061 (Memory leaks when openssl_decrypt). (Pierre)

- SPL extension:
  . Fixed memory leak in DirectoryIterator::getExtension() and 
    SplFileInfo::getExtension(). (Felipe)

- Tokenizer Extension
  . Fixed bug #54089 (token_get_all() does not stop after __halt_compiler).
    (Ilia)

17 Feb 2011, PHP 5.3.6RC1
- Upgraded bundled Sqlite3 to version 3.7.4. (Ilia)
- Upgraded bundled PCRE to version 8.11. (Ilia)

- Zend Engine:
  . Indirect reference to $this fails to resolve if direct $this is never used
    in method. (Scott)
  . Added options to debug backtrace functions. (Stas)
  . Fixed Bug #53971 (isset() and empty() produce apparently spurious runtime
    error). (Dmitry)
  . Fixed Bug #53958 (Closures can't 'use' shared variables by value and by
    reference). (Dmitry)
  . Fixed Bug #53629 (memory leak inside highlight_string()). (Hannes, Ilia)
  . Fixed Bug #51458 (Lack of error context with nested exceptions). (Stas)
  . Fixed Bug #47143 (Throwing an exception in a destructor causes a fatal
    error). (Stas)

- Core:
  . Added ability to connect to HTTPS sites through proxy with basic
    authentication using stream_context/http/header/Proxy-Authorization (Dmitry)
  . Changed default value of ini directive serialize_precision from 100 to 17.
    (Gustavo)
  . Fixed bug #54055 (buffer overrun with high values for precision ini
    setting). (Gustavo)